--- a/package.json
+++ b/package.json
@@ -1,28 +1,14 @@
 {
-  "name": "copier",
+  "name": "config-files",
   "version": "1.0.0",
-  "description": "Copier can copy and install your common config files from the GitHub repo",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/npm/cli.git"
-  },
-  "license": "MIT",
-  "author": "Eli Levit",
+  "description": "-- boilerplate --",
   "main": "index.js",
-  "bin": {
-    "scriber": "./index.js"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "chalk": "^2.4.2",
-    "commander": "^2.19.0",
-    "configstore": "^4.0.0",
-    "fs-extra": "^7.0.1",
-    "inquirer": "^6.2.2",
-    "ora": "^3.1.0"
-  },
+  "author": "Eli Levit",
+  "license": "ISC",
+  "dependencies": {},
   "devDependencies": {
     "prettier": "^1.16.4"
   }
