--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
-  "name": "config-files",
+  "name": "copier",
   "version": "1.0.0",
-  "description": "-- boilerplate --",
-  "main": "index.js",
+  "description": "Copier can copy and install your common config files from the GitHub repo",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/npm/cli.git"
+  },
+  "license": "MIT",
+  "author": "Eli Levit",
+  "main": "bin/index.js",
+  "bin": {
+    "scriber": "bin/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Eli Levit",
-  "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "chalk": "^2.4.2",
+    "commander": "^2.19.0",
+    "configstore": "^4.0.0",
+    "fs-extra": "^7.0.1",
+    "inquirer": "^6.2.2",
+    "ora": "^3.1.0"
+  },
   "devDependencies": {
     "prettier": "^1.16.4"
   }
