--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
     "custom-starter": "bin/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "linters": {
+      "*.js": [
+        "./node_modules/.bin/prettier --write",
+        "git add"
+      ]
+    }
   },
   "dependencies": {
     "chalk": "^2.4.2",
@@ -24,10 +32,12 @@
     "configstore": "^4.0.0",
     "execa": "^1.0.0",
     "fs-extra": "^7.0.1",
+    "husky": "^1.3.1",
     "inquirer": "^6.2.2",
     "ora": "^3.1.0"
   },
   "devDependencies": {
+    "lint-staged": "^8.1.5",
     "prettier": "^1.16.4"
   }
 }
