--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: false
 language: node_js
+node_js:
+  - '9'
 cache:
   directories:
     - node_modules
@@ -8,7 +10,5 @@ branches:
     - master
 notifications:
   email: false
-before_script:
-  - npm prune
 script:
   - npm test
